fix: update primary color in theme and enhance A11yHelper styles for better visibility

--- a/app/assets/scss/theme.scss
+++ b/app/assets/scss/theme.scss
@@ -11,8 +11,8 @@
 // Colors (base palette)
 $colors: (
   // branding / interactive
-  primary: #9861ff,
-  // #9861ff
+  primary: #854dff,
+  // #9861ff,
   link: #9861ff,
   link-hover: #c7aaff,
   secondary: #61748d,
